--- a/main.css
+++ b/main.css
@@ -258,11 +258,12 @@ ul.visible {
   /* Change font as needed */ }
 
 footer {
-  background-color: #c0c0c0;
+  background-color: #2c2c2c;
   text-align: center;
   padding: 1.5rem 0;
   font-size: 1rem;
-  font-family: "Satisfy", cursive; }
+  font-family: "Satisfy", cursive;
+  color: #c0c0c0; }
 
 @media screen and (max-width: 767px) {
   #search-section-second {
